# Gaia

./: .cpanel.yml  .env  .gitignore  README.md  application.py  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
.ebextensions/: spacy.config
Client/: .env  .eslintrc.js  README.md  index.html  jest.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1708373920190-f9ecb29209ac2.mjs
Client/public/: data-dispositivos-encontrados.json  index.html
Client/src/: App.tsx  TokenFirebaseToBackend.ts  app.tsx  firebase.ts  global.css  index.tsx  main.tsx  twilio.ts
Contracts/: README.md
FTComponents/: Mint.tsx  ReadState.tsx  TotalSupply.tsx  Transfer.tsx
Gaia-main contract-vft/: Cargo.toml
Gaia-main contract-vft/app/: Cargo.toml
Gaia-main contract-vft/app/src/: lib.rs
Gaia-main contract-vft/app/src/services/: mini_dexs_service.rs  mod.rs
Gaia-main contract-vft/app/src/states/: mini_dexs_state.rs  mod.rs
Gaia-main contract-vft/wasm/: Cargo.toml  README.md  app.idl  app_client.rs  build.rs
Gear-Template-Frontend/: .env  .eslintrc.js  package-lock.json  package.json
Gear-Template-Frontend/public/: index.html  (+1 more)
gaia_server/: .gitignore  Procfile  README.md  app.py  application.py  config.py  package-lock.json  package.json  prometheus.yml  pyproject.toml  pyvenv.cfg  request.http  requirements.txt
main contract/: Cargo.toml  Readme.md  rust-toolchain.toml
src/: app.tsx  consts.ts  main.tsx  middlewares.py
templates/: coinbase.html  face.html  order.html
(+364 files in other folders)
